force-app/main/default/objects/Gratitude_Entry__c/Gratitude_Entry__c.object-meta.xml
<CustomObject>
    <description>Stores daily gratitude entries with timestamp and categorization support</description>
    <label>Gratitude Entry</label>
    <pluralLabel>Gratitude Entries</pluralLabel>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Gratitude Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>