force-app/main/default/objects/Gratitude_Entry__c/fields/Daily_Routine__c.field-meta.xml
<CustomField>
    <fullName>Daily_Routine__c</fullName>
    <label>Daily Routine</label>
    <description>Lookup to parent Daily_Routine__c record</description>
    <type>Lookup</type>
    <referenceTo>Daily_Routine__c</referenceTo>
    <relationshipLabel>Gratitude Entries</relationshipLabel>
    <relationshipName>Gratitude_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>