force-app/main/default/objects/Gratitude_Entry__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <label>Date Recorded</label>
    <description>Date when gratitude was recorded</description>
    <type>Date</type>
    <required>true</required>
    <defaultValue>TODAY()</defaultValue>
</CustomField>