force-app/main/default/objects/Gratitude_Entry__c/fields/Gratitude_Text__c.field-meta.xml
<CustomField>
    <fullName>Gratitude_Text__c</fullName>
    <label>Gratitude Text</label>
    <description>The gratitude entry text</description>
    <type>LongTextArea</type>
    <length>1000</length>
    <required>true</required>
</CustomField>