force-app/main/default/objects/Gratitude_Entry__c/fields/Intensity__c.field-meta.xml
<CustomField>
    <fullName>Intensity__c</fullName>
    <label>Intensity</label>
    <description>Intensity of gratitude feeling (1-10 scale)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>