force-app/main/default/objects/Gratitude_Entry__c/fields/Time_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Time_Recorded__c</fullName>
    <label>Time Recorded</label>
    <description>Timestamp when gratitude was recorded</description>
    <type>DateTime</type>
    <required>true</required>
    <defaultValue>NOW()</defaultValue>
</CustomField>