force-app/main/default/objects/Gratitude_Entry__c/validationRules/Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Not_Future</fullName>
    <active>true</active>
    <description>Prevents recording gratitude for future dates</description>
    <errorConditionFormula>Date_Recorded__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Recorded__c</errorDisplayField>
    <errorMessage>Cannot record gratitude for a future date.</errorMessage>
</ValidationRule>