force-app/main/default/objects/Gratitude_Entry__c/validationRules/Intensity_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Intensity_Range</fullName>
    <active>true</active>
    <description>Ensures intensity is between 1 and 10</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Intensity__c)),
    OR(Intensity__c &lt; 1, Intensity__c &gt; 10)
)</errorConditionFormula>
    <errorDisplayField>Intensity__c</errorDisplayField>
    <errorMessage>Intensity must be between 1 and 10.</errorMessage>
</ValidationRule>