force-app/main/default/objects/Gratitude_Entry__c/listViews/This_Weeks_Gratitudes.listView-meta.xml
<ListView>
    <fullName>This_Weeks_Gratitudes</fullName>
    <columns>NAME</columns>
    <columns>Gratitude_Text__c</columns>
    <columns>Category__c</columns>
    <columns>Intensity__c</columns>
    <columns>Date_Recorded__c</columns>
    <columns>Daily_Routine__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Recorded__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week's Gratitudes</label>
</ListView>