force-app/main/default/objects/Gratitude_Entry__c/listViews/Todays_Gratitudes.listView-meta.xml
<ListView>
    <fullName>Todays_Gratitudes</fullName>
    <columns>NAME</columns>
    <columns>Gratitude_Text__c</columns>
    <columns>Category__c</columns>
    <columns>Intensity__c</columns>
    <columns>Time_Recorded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Recorded__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today's Gratitudes</label>
</ListView>